Move java example into own dir