@@ -1,11 +1,3 @@
-# Example for connecting to the JDBC driver from a Java project
+# Example clients to query Semantic Layer
 
-This basic example shows how to set up a Java project using gradle to connect to and query the Semantic Layer.
-
-To run this:
-
-```
-_JAVA_OPTIONS="--add-opens=java.base/java.nio=ALL-UNNAMED" ./gradlew run --args="<jdbc-url>"
-```
-
-NOTE: Arrow requires using the `--add-opens=java.base/java.nio=ALL-UNNAMED` JVM option, otherwise you will get errors.
+Check the README for each language for an example of how to use it.
